kubernetes/argo-cd/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: argo-cd
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
